@@ -1,5 +1,6 @@
 package com.sk89q.worldedit.bukkit.adapter.impl.fawe.v1_19_R1;
 
+import com.destroystokyo.paper.util.maplist.EntityList;
 import com.fastasyncworldedit.bukkit.adapter.CachedBukkitAdapter;
 import com.fastasyncworldedit.bukkit.adapter.DelegateSemaphore;
 import com.fastasyncworldedit.bukkit.adapter.NMSAdapter;
@@ -18,18 +19,18 @@ import com.sk89q.worldedit.world.biome.BiomeTypes;
 import com.sk89q.worldedit.world.block.BlockState;
 import com.sk89q.worldedit.world.block.BlockTypesCache;
 import io.papermc.lib.PaperLib;
-import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
+import io.papermc.paper.world.ChunkEntitySlices;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Holder;
 import net.minecraft.core.IdMap;
 import net.minecraft.core.Registry;
-import net.minecraft.core.SectionPos;
 import net.minecraft.network.protocol.game.ClientboundLevelChunkWithLightPacket;
 import net.minecraft.server.level.ChunkHolder;
 import net.minecraft.server.level.ChunkMap;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.BitStorage;
+import net.minecraft.util.ExceptionCollector;
 import net.minecraft.util.SimpleBitStorage;
 import net.minecraft.util.ThreadingDetector;
 import net.minecraft.util.ZeroBitStorage;
@@ -49,6 +50,7 @@ import net.minecraft.world.level.chunk.LinearPalette;
 import net.minecraft.world.level.chunk.Palette;
 import net.minecraft.world.level.chunk.PalettedContainer;
 import net.minecraft.world.level.chunk.SingleValuePalette;
+import net.minecraft.world.level.entity.PersistentEntitySectionManager;
 import net.minecraft.world.level.gameevent.GameEventDispatcher;
 import net.minecraft.world.level.gameevent.GameEventListener;
 import org.bukkit.craftbukkit.v1_19_R1.CraftChunk;
@@ -105,6 +107,11 @@ public final class PaperweightPlatformAdapter extends NMSAdapter {
     private static final MethodHandle methodremoveTickingBlockEntity;
 
     private static final Field fieldRemove;
+
+    static final boolean POST_CHUNK_REWRITE;
+    private static Method PAPER_CHUNK_GEN_ALL_ENTITIES;
+    private static Field LEVEL_CHUNK_ENTITIES;
+    private static Field SERVER_LEVEL_ENTITY_MANAGER;
 
     static {
         try {
@@ -176,6 +183,28 @@ public final class PaperweightPlatformAdapter extends NMSAdapter {
                 throw new Error("data type scale not a power of two");
             }
             CHUNKSECTION_SHIFT = 31 - Integer.numberOfLeadingZeros(scale);
+            boolean chunkRewrite;
+            try {
+                ServerLevel.class.getDeclaredMethod("getEntityLookup");
+                chunkRewrite = true;
+                PAPER_CHUNK_GEN_ALL_ENTITIES = ChunkEntitySlices.class.getDeclaredMethod("getAllEntities");
+                PAPER_CHUNK_GEN_ALL_ENTITIES.setAccessible(true);
+            } catch (NoSuchMethodException ignored) {
+                chunkRewrite = false;
+            }
+            try {
+                // Paper - Pre-Chunk-Update
+                LEVEL_CHUNK_ENTITIES = LevelChunk.class.getDeclaredField("entities");
+                LEVEL_CHUNK_ENTITIES.setAccessible(true);
+            } catch (NoSuchFieldException ignored) {
+            }
+            try {
+                // Non-Paper
+                SERVER_LEVEL_ENTITY_MANAGER = ServerLevel.class.getDeclaredField("entityManager");
+                LEVEL_CHUNK_ENTITIES.setAccessible(true);
+            } catch (NoSuchFieldException ignored) {
+            }
+            POST_CHUNK_REWRITE = chunkRewrite;
         } catch (RuntimeException e) {
             throw e;
         } catch (Throwable rethrow) {
@@ -590,10 +619,32 @@ public final class PaperweightPlatformAdapter extends NMSAdapter {
     }
 
     static List<Entity> getEntities(LevelChunk chunk) {
+        ExceptionCollector<RuntimeException> collector = new ExceptionCollector<>();
         if (PaperLib.isPaper()) {
-            return Arrays.asList(chunk.entities.getRawData());
+            if (POST_CHUNK_REWRITE) {
+                try {
+                    //noinspection unchecked
+                    return (List<Entity>) PAPER_CHUNK_GEN_ALL_ENTITIES.invoke(chunk.level.getEntityLookup().getChunk(chunk.locX, chunk.locZ));
+                } catch (IllegalAccessException | InvocationTargetException e) {
+                    throw new RuntimeException("Failed to lookup entities [POST_CHUNK_REWRITE=true]", e);
+                }
+            }
+            try {
+                EntityList entityList = (EntityList) LEVEL_CHUNK_ENTITIES.get(chunk);
+                return List.of(entityList.getRawData());
+            } catch (IllegalAccessException e) {
+                collector.add(new RuntimeException("Failed to lookup entities [POST_CHUNK_REWRITE=false]", e));
+                // fall through
+            }
         }
-        return chunk.level.entityManager.getEntities(chunk.getPos());
+        try {
+            //noinspection unchecked
+            return ((PersistentEntitySectionManager<Entity>) (SERVER_LEVEL_ENTITY_MANAGER.get(chunk.level))).getEntities(chunk.getPos());
+        } catch (IllegalAccessException e) {
+            collector.add(new RuntimeException("Failed to lookup entities [PAPER=false]", e));
+        }
+        collector.throwIfPresent();
+        return List.of();
     }
 
     record FakeIdMapBlock(int size) implements IdMap<net.minecraft.world.level.block.state.BlockState> {
